5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1734_2507.log
== TEST (2019-05-09 19:23:59) 
-- CODE:
quant=int(input("digite a quantidade inicial: "))
cresc=int(input("digite o percentual de crescimento:"))
venda=int(input("digite a quantidade de vendas:"))
pira=0
cont=0
while(input(pira>0)):
	pira=
	cont=cont+1
	if(pira<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
	print(mensagem)	
-- ERROR:
File "XXXX", line 7
    pira=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:24:14) 
-- CODE:
quant=int(input("digite a quantidade inicial: "))
cresc=int(input("digite o percentual de crescimento:"))
venda=int(input("digite a quantidade de vendas:"))
pira=0
cont=0
while(input(pira>0)):
	cont=cont+1
	if(pira<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
	print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(input(pira>0)):
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:24:33) 
-- CODE:
quant=int(input("digite a quantidade inicial: "))
cresc=int(input("digite o percentual de crescimento:"))
venda=int(input("digite a quantidade de vendas:"))
pira=0
cont=0
while(input(pira>0)):
	cont=cont+1
	if(pira<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
	print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(input(pira>0)):
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:42:59) 
-- CODE:
quant=int(input("digite a quantidade inicial: "))
cresc=int(input("digite o percentual de crescimento:"))
por=cresc/100
meses=0
while(0<quant<=8000):
	venda=int(input("digite a quantidade de vendas:"))
	quant=(quant+quant*por)-venda
	meses=meses+1
if(quant<=0):
	mensagem="ZERO"
	print(meses)
if(quant>=8000):
	mensagem="MAXIMO"
	print(meses)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:43:53) 
-- CODE:
quant=int(input("digite a quantidade inicial: "))
cresc=int(input("digite o percentual de crescimento:"))
por=cresc/100
meses=0
while(0<quant<=8000):
	venda=int(input("digite a quantidade de vendas:"))
	quant=(quant+quant*por)-venda
	meses=meses+1
if(quant<=0):
	print("ZERO")
	print(meses)
if(quant>=8000):
	print("MAXIMO")
	print(meses)	
-- EXECUTION TIME:
0.219715
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
